# cc-workshop

./: .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  alembic.ini  prompt.md  pyproject.toml
.claude/: settings.json
.claude/agents/: doc.md
.claude/rules/: project.md  system.md
.claude/rules/eng/: dev.md  test.md
.claude/rules/eng/python/: dev.md  test.md
.claude/skills/align/: SKILL.md
.claude/skills/flow/: SKILL.md
.claude/skills/flow/references/: changes.md  checkpoint.md  commit.md  squash.md
scripts/: build.py  git_branch.py  git_checkpoint.py  git_commit.py  git_squash.py  install.py  lint.py  setup.sh  test.py
specs/: PRD.md  SRS.md
src/taskflow/models/: __init__.py  enums.py  retry_policy.py
test/: conftest.py
test/fixtures/: docker_socket.py  postgres.py
test/unit/taskflow/models/: test_enums.py  test_retry_policy.py
