[project]
name = "dotagent"
version = "0.1.0"
description = "AI powered dev velocity tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3==1.40.74",
    "pyyaml>=6.0.0,<7",
    "deepmerge>=2.0,<3",
    "jinja2>=3.1.6,<4",
    "toolz>=1.1.0,<2",
    "fastapi>=0.115.0",
    "motor>=3.6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0,<1",
    "anyio>=4.0.0,<5",
    "httpx>=0.27.0,<1",
    "ruff>=0.8.0,<1",
    "testcontainers>=4.13.2,<5",
    "pytest-timeout>=2.4.0,<3",
    "pytest-xdist>=3.5,<4",
    "minio>=7.2.18,<8",
    "typer>=0.20.1,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
include = ["src", ".claude/skills"]
extraPaths = ["src"]
exclude = ["**/__pycache__", "**/node_modules", "**/.venv"]

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "auto"
timeout = 30

filterwarnings = [
    "ignore::DeprecationWarning:testcontainers.core.waiting_utils",
    "ignore::DeprecationWarning:testcontainers.minio",
    "ignore::DeprecationWarning:testcontainers.kafka",
]

[tool.ruff]
line-length = 88
target-version = "py314"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "scripts",
]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "N",     # pep8-naming
    "I",     # isort
    "D",     # pydocstyle
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "S",     # flake8-bandit (security)
    "T20",   # flake8-print
    "SIM",   # flake8-simplify
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented-out code)
    "PL",    # Pylint (PLR, PLC, PLE, PLW)
    "RUF",   # Ruff-specific rules
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "TCH",   # flake8-type-checking
    "PERF",  # Perflint
]

ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D203", # 1 blank line required before class docstring (conflicts with D211)
    "D213", # Multi-line docstring summary should start at the second line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"test/*" = [
    "S101",    # Allow assert
    "ARG",     # Allow unused args
    "D",       # Skip docstrings
    "ANN",     # Skip type annotations
    "PLR2004", # Allow magic values
    "PLC0415", # Allow imports not at top level
    "TC002",   # Allow third-party imports outside TYPE_CHECKING
    "TC003",   # Allow stdlib imports outside TYPE_CHECKING
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["dotagent"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Respect magic trailing commas.
skip-magic-trailing-comma = false

# Automatically detect the appropriate line ending.
line-ending = "auto"
